--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Inicios NodeJS",
   "main": "index.js",
   "scripts": {
-    "start": "node .."
+    "start": "node ."
   },
   "repository": {
     "type": "git",
