--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Inicios NodeJS",
   "main": "app.js",
   "scripts": {
-    "start": "node ."
+    "server": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
